# buddy-examples

./: README.md
BuddyGemmini/: .gitignore  CMakeLists.txt  README.md  buddy-lenet-import.py  buddy-lenet-main.cpp  lenet-model.pth
BuddyGemmini/include/: gemmini_testutils.h
